@@ -1,19 +1,16 @@
 package uk.co.bconline.ndelius.controller;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableMap;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
+import tools.jackson.databind.ObjectMapper;
 import uk.co.bconline.ndelius.model.Dataset;
 import uk.co.bconline.ndelius.model.Group;
 import uk.co.bconline.ndelius.model.ReferenceData;
@@ -25,16 +22,15 @@ import uk.co.bconline.ndelius.repository.db.DomainEventRepository;
 import uk.co.bconline.ndelius.repository.db.StaffRepository;
 
 import java.time.LocalDate;
+import java.util.Map;
 import java.util.Optional;
 
 import static java.time.LocalDateTime.now;
-import static java.time.temporal.ChronoUnit.DAYS;
 import static java.time.temporal.ChronoUnit.SECONDS;
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
 import static org.springframework.security.test.web.servlet.setup.SecurityMockMvcConfigurers.springSecurity;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
@@ -47,7 +43,6 @@ import static uk.co.bconline.ndelius.test.util.UserUtils.*;
 @SpringBootTest
 @DirtiesContext
 @ActiveProfiles("test")
-@RunWith(SpringRunner.class)
 public class UserControllerUpdateTest {
     @Autowired
     private WebApplicationContext context;
@@ -58,9 +53,12 @@ public class UserControllerUpdateTest {
     @Autowired
     private DomainEventRepository domainEventRepository;
 
+    @Autowired
+    private ObjectMapper objectMapper;
+
     private MockMvc mvc;
 
-    @Before
+    @BeforeEach
     public void setup() {
         mvc = MockMvcBuilders
             .webAppContextSetup(context)
@@ -91,7 +89,7 @@ public class UserControllerUpdateTest {
             .roles(singletonList(Role.builder()
                 .name("UMBT001")
                 .build()))
-            .groups(ImmutableMap.of(
+            .groups(Map.of(
                 "Fileshare", singletonList(Group.builder().name("Group 1").type("Fileshare").build())))
             .build();
 
@@ -99,7 +97,7 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user")
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(user)))
+                .content(objectMapper.writeValueAsString(user)))
             .andExpect(status().isCreated())
             .andExpect(redirectedUrl("/user/" + username));
 
@@ -109,7 +107,7 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user/" + username)
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(user.toBuilder()
+                .content(objectMapper.writeValueAsString(user.toBuilder()
                     .email("test2@test.com")
                     .telephoneNumber("9999")
                     .forenames("A B C")
@@ -126,7 +124,7 @@ public class UserControllerUpdateTest {
                     .homeArea(Dataset.builder().code("N01").build())
                     .privateSector(false)
                     .roles(singletonList(Role.builder().name("UMBT002").build()))
-                    .groups(ImmutableMap.of(
+                    .groups(Map.of(
                         "Fileshare", singletonList(Group.builder().name("Group 2").type("Fileshare").build()),
                         "NDMIS-Reporting", singletonList(Group.builder().name("Group 1").type("NDMIS-Reporting").build())))
                     .build())))
@@ -167,7 +165,7 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user")
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(aValidUser().toBuilder()
+                .content(objectMapper.writeValueAsString(aValidUser().toBuilder()
                     .username(username)
                     .build())))
             .andExpect(status().isCreated());
@@ -176,7 +174,7 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user/" + username)
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(aValidUser().toBuilder()
+                .content(objectMapper.writeValueAsString(aValidUser().toBuilder()
                     .username(username + "-renamed")
                     .build())))
             .andExpect(status().isNoContent());
@@ -190,7 +188,7 @@ public class UserControllerUpdateTest {
             .andExpect(status().isOk())
             .andExpect(jsonPath("$.username", is(username + "-renamed")));
 
-        assertEquals(preDomainEventCount + 1, domainEventRepository.findAll().size());
+        assertThat(domainEventRepository.findAll()).hasSize(preDomainEventCount + 1);
     }
 
     @Test
@@ -201,7 +199,7 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user")
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(aValidUser().toBuilder()
+                .content(objectMapper.writeValueAsString(aValidUser().toBuilder()
                     .username(username)
                     .build())))
             .andExpect(status().isCreated());
@@ -209,7 +207,7 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user/" + username)
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(aValidUser().toBuilder()
+                .content(objectMapper.writeValueAsString(aValidUser().toBuilder()
                     .username("test.user")
                     .build())))
             .andExpect(status().isBadRequest());
@@ -230,14 +228,14 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user")
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(user)))
+                .content(objectMapper.writeValueAsString(user)))
             .andExpect(status().isCreated());
 
         // When
         mvc.perform(post("/api/user/" + username)
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(user.toBuilder()
+                .content(objectMapper.writeValueAsString(user.toBuilder()
                     .username(username + "-renamed")
                     .build())))
             .andExpect(status().isNoContent());
@@ -276,19 +274,19 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user")
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(user1)))
+                .content(objectMapper.writeValueAsString(user1)))
             .andExpect(status().isCreated());
         mvc.perform(post("/api/user")
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(user2)))
+                .content(objectMapper.writeValueAsString(user2)))
             .andExpect(status().isCreated());
 
         // When I update user 2's staff code to that of user 1
         mvc.perform(post("/api/user/" + username2)
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(user2.toBuilder()
+                .content(objectMapper.writeValueAsString(user2.toBuilder()
                     .staffCode("N01B501")
                     .staffGrade(ReferenceData.builder().code("GRADE1").description("Grade 1").build())
                     .teams(singletonList(Team.builder().code("N01TST").build()))
@@ -318,7 +316,7 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user")
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(aValidUser().toBuilder()
+                .content(objectMapper.writeValueAsString(aValidUser().toBuilder()
                     .username(username)
                     .email(username + "@test.test")
                     .build())))
@@ -328,7 +326,7 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user/" + username)
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(aValidUser().toBuilder()
+                .content(objectMapper.writeValueAsString(aValidUser().toBuilder()
                     .username(username + "-renamed")
                     .email(username + "@test.test")
                     .build())))
@@ -353,7 +351,7 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user/test.user")
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(aValidUser().toBuilder()
+                .content(objectMapper.writeValueAsString(aValidUser().toBuilder()
                     .username("test.user-renamed")
                     .build())))
             .andExpect(status().isNoContent());
@@ -372,7 +370,7 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user/test.user")
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(aValidUser().toBuilder().username("test.user").build())))
+                .content(objectMapper.writeValueAsString(aValidUser().toBuilder().username("test.user").build())))
 
             // Then I should receive an error message
             .andExpect(status().isBadRequest())
@@ -393,22 +391,22 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user")
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(user)))
+                .content(objectMapper.writeValueAsString(user)))
             .andExpect(status().isCreated());
 
         // When I update the staff code to N01A602
         mvc.perform(post("/api/user/" + username)
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(user.toBuilder()
+                .content(objectMapper.writeValueAsString(user.toBuilder()
                     .staffCode("N01A602")
                     .build())))
             .andExpect(status().isNoContent());
 
         // Then the old staff record (N01A601) should have an end date of today
         Optional<StaffEntity> oldStaff = staffRepository.findByCode("N01A601");
-        assertTrue(oldStaff.isPresent());
-        assertEquals(oldStaff.get().getEndDate(), LocalDate.now().minus(1, DAYS));
+        assertThat(oldStaff).isPresent();
+        assertThat(oldStaff.orElseThrow().getEndDate()).isEqualTo(LocalDate.now().minusDays(1));
     }
 
     @Test
@@ -425,14 +423,14 @@ public class UserControllerUpdateTest {
         mvc.perform(post("/api/user")
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(user)))
+                .content(objectMapper.writeValueAsString(user)))
             .andExpect(status().isCreated());
 
         // When I update the home area to N02
         mvc.perform(post("/api/user/" + username)
                 .header("Authorization", "Bearer " + token)
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(new ObjectMapper().findAndRegisterModules().writeValueAsString(user.toBuilder()
+                .content(objectMapper.writeValueAsString(user.toBuilder()
                     .homeArea(Dataset.builder().code("N02").build())
                     .build())))
             .andExpect(status().isNoContent());
@@ -446,8 +444,8 @@ public class UserControllerUpdateTest {
 
         // And the staff record should be end-dated
         Optional<StaffEntity> staff = staffRepository.findByCode("N01A603");
-        assertTrue(staff.isPresent());
-        assertEquals(staff.get().getEndDate(), LocalDate.now().minus(1, DAYS));
+        assertThat(staff).isPresent();
+        assertThat(staff.orElseThrow().getEndDate()).isEqualTo(LocalDate.now().minusDays(1));
     }
 
     // Verify fix for defect DST-7302 - 500 Error when removing a user's phone number
@@ -562,8 +560,8 @@ public class UserControllerUpdateTest {
 
         // And the start and end date on the staff record are updated to yesterday's date
         StaffEntity previousStaff = staffRepository.findByCode("N01A208").orElseThrow();
-        assertEquals(LocalDate.now().minusDays(1), previousStaff.getEndDate());
-        assertEquals(LocalDate.now().minusDays(1), previousStaff.getStartDate());
+        assertThat(previousStaff.getEndDate()).isEqualTo(LocalDate.now().minusDays(1));
+        assertThat(previousStaff.getStartDate()).isEqualTo(LocalDate.now().minusDays(1));
     }
 
 
@@ -585,8 +583,8 @@ public class UserControllerUpdateTest {
 
         // And the start and end date on the staff record are updated to yesterday's date
         StaffEntity previousStaff = staffRepository.findByCode("N01A209").orElseThrow();
-        assertEquals(LocalDate.now().minusDays(1), previousStaff.getEndDate());
-        assertEquals(LocalDate.now().minusDays(1), previousStaff.getStartDate());
+        assertThat(previousStaff.getEndDate()).isEqualTo(LocalDate.now().minusDays(1));
+        assertThat(previousStaff.getStartDate()).isEqualTo(LocalDate.now().minusDays(1));
     }
 
     @Test
@@ -598,9 +596,9 @@ public class UserControllerUpdateTest {
                 .username(nextTestUsername())
                 .startDate(LocalDate.now())
                 .build());
-        assertEquals(preDomainEventCount, domainEventRepository.findAll().size());
+        assertThat(domainEventRepository.findAll()).hasSize(preDomainEventCount);
         updateUser(mvc, noCodeUser.toBuilder().surname("Update").build()).andExpect(status().isNoContent());
-        assertEquals(preDomainEventCount, domainEventRepository.findAll().size());
+        assertThat(domainEventRepository.findAll()).hasSize(preDomainEventCount);
 
         // Given a user with staff code
         User codeUser = createUser(mvc,
@@ -611,12 +609,12 @@ public class UserControllerUpdateTest {
                 .staffGrade(ReferenceData.builder().code("GRADE 1").description("Grade 1").build())
                 .build());
 
-        assertEquals(preDomainEventCount + 1, domainEventRepository.findAll().size());
+        assertThat(domainEventRepository.findAll()).hasSize(preDomainEventCount + 1);
         // Updating the user on email should NOT update the count
         updateUser(mvc, codeUser.toBuilder().email("TEST").build()).andExpect(status().isNoContent());
-        assertEquals(preDomainEventCount + 1, domainEventRepository.findAll().size());
+        assertThat(domainEventRepository.findAll()).hasSize(preDomainEventCount + 1);
         // Updating the user on surname should also update the domainEvent
         updateUser(mvc, codeUser.toBuilder().surname("AnotherSurname").build()).andExpect(status().isNoContent());
-        assertEquals(preDomainEventCount + 2, domainEventRepository.findAll().size());
+        assertThat(domainEventRepository.findAll()).hasSize(preDomainEventCount + 2);
     }
 }
